# myDevOpsExercises

ex01_buildingWithSetuptools/: setup.py
ex01_buildingWithSetuptools/Python_Addition_Calculator.egg-info/: SOURCES.txt  entry_points.txt
ex01_buildingWithSetuptools/package/: command_line.py
ex02_dependencyMgtWithPip/: README.md
ex02_dependencyMgtWithPip/package/: generateName.py
ex03_advDependencyMgtWithPoetry/: README.md  pyproject.toml
ex04_packageAndDistroWithWheelAndPyPI/: .gitignore  LICENSE  setup.py
ex05_creatingADockerfile/: .dockerignore
ex09_dockerisingAnApp/: Dockerfile
ex10_learningYAML/: tutorial.yaml
ex11_writingJenkinsfile/: Jenkinsfile
ex12_awsCLI/: cli.txt
ex14_initialising_terraform/: main.tf
ex15_referencing_resources_terraform/: main.tf
ex16_terraform_variables/: main.tf
ex1_buildingWithSetuptools/: LICENCE  README.md
ex1_buildingWithSetuptools/Python_Addition_Calculator.egg-info/: PKG-INFO
ex2_dependencyMgtWithPip/: requirements.txt
ex3_advDependencyMgtWithPoetry/: 0.0.3
ex4_packageAndDistroWithWheelAndPyPI/: README.md  requirements.txt
ex4_packageAndDistroWithWheelAndPyPI/package/: example.py
ex5_creatingADockerfile/: Dockerfile  Dockerfile.0
ex6/: Dockerfile
