[tool.poetry]
name = "ex3-advdependencymgtwithpoetry"
version = "0.1.0"
description = "simple exercise on poetry"
authors = ["EOA"]
license = "MIT"
readme = "README.md"
packages = [{include = "ex3_advdependencymgtwithpoetry"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
names-generator = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
